# customOS

./: README.md
SomeReadyBootPartitions/OrangePiZero2w/boot/: boot.scr  sun50i-h618-orangepi-zero2w.dtb  uboot.env
SomeReadyBootPartitions/RaspberryPiZero2/boot/: bcm2708-rpi-b.dtb  bcm2708-rpi-zero-w.dtb  bcm2709-rpi-2-b.dtb
SomeReadyBootPartitions/RaspberryPiZero2/boot/System Volume Information/: IndexerVolumeGuid
boot/: bcm2708-rpi-b-plus.dtb  bcm2708-rpi-b-rev1.dtb  bcm2708-rpi-cm.dtb  bcm2708-rpi-zero.dtb  bcm2709-rpi-cm2.dtb  bcm2710-rpi-2-b.dtb  bcm2710-rpi-3-b-plus.dtb  bcm2710-rpi-3-b.dtb  bcm2710-rpi-cm3.dtb  bcm2711-rpi-cm4s.dtb  bcm2712-rpi-5-b.dtb  cmdline.txt  config.txt
customOS/: README.md
customOS/boardRelatedNotes/: bootingInRaspberryPi.md
customOS/customOS/: compileKernel  compileKernel.sh  kernelBooting.txt  prepare
customOS/customOS/cat/: cat.c
customOS/customOS/clear/: clear.c
customOS/customOS/helloApp/: helloApp.c
customOS/customOS/init/: init  init.c
customOS/customOS/ls/: ls.c
customOS/customOS/myShell/: myShell.c
customOS/customOS/netto/: netto.c
customOS/customOS/recieveApp/: recieve  recieveApp.c
customOS/customOS/remoteShell/: remoteShell.c
customOS/customOS/rm/: rm.c
customOS/customOS/sendApp/: newApp  sendApp.c  sender
customOS/customOS/touch/: touch.c
customOS/initramfs/: home
customOS/scripts/: basicBlockDeviceNodes  compileKernelForRaspbberyPi  prepareInitramfs
customOS/someTerminalCommands/: CMakeLists.txt
customOS/someTerminalCommands/cat/: CMakeLists.txt
customOS/someTerminalCommands/clear/: CMakeLists.txt
customOS/someTerminalCommands/cpumemstat/: CMakeLists.txt  cpumemstat.c
customOS/someTerminalCommands/helloApp/: CMakeLists.txt
customOS/someTerminalCommands/init/: CMakeLists.txt  init.c
customOS/someTerminalCommands/ls/: CMakeLists.txt
customOS/someTerminalCommands/mkdir/: CMakeLists.txt  mkdir.c
customOS/someTerminalCommands/myShell/: CMakeLists.txt  myShell.c
customOS/someTerminalCommands/netto/: CMakeLists.txt
customOS/someTerminalCommands/recieveApp/: CMakeLists.txt
customOS/someTerminalCommands/remoteShell/: CMakeLists.txt
customOS/someTerminalCommands/rm/: CMakeLists.txt
customOS/someTerminalCommands/top/: CMakeLists.txt  top.c
customOS/someTerminalCommands/touch/: CMakeLists.txt
hostApps/remoteTerminal/: CMakeLists.txt  remoteTerminal  remoteTerminal.c
hostApps/sendApp/: CMakeLists.txt  hello.c  myTop  myTop.c  sendApp.c  sender  testTransfer
myfilesystem/initramfs/: init
myfilesystem/myInit/: init.c  kernelBooting.txt  prepare.sh
myfilesystem/myInit/cat/: cat.c
myfilesystem/myInit/cd/: cd
myfilesystem/myInit/clear/: clear  clear.c
myfilesystem/myInit/helloApp/: hello  helloApp.c
myfilesystem/myInit/init/: init  init.c
myfilesystem/myInit/mkdir/: mkdir.c
myfilesystem/myInit/myShell/: myShell  myShell.c
myfilesystem/myInit/my_cd/: my_cd.c
myfilesystem/myInit/my_ls/: my_ls.c
myfilesystem/myInit/my_mkdir/: my_mkdir
myfilesystem/myInit/netto/: netto  netto.c
myfilesystem/myInit/netto/sender/: sender  sender.c
myfilesystem/myInit/remoteShell/: remoteShell  remoteShell.c
myfilesystem/myInit/remoteTerminal/: Makefile  remoteTerminal.c
myfilesystem/myInit/touch/: touch.c
myfilesystem/myInit/vi/: vi  vi.c
